--- a/STAT 440 (Data Management)/ReadMe
+++ b/STAT 440 (Data Management)/ReadMe
@@ -1,1 +1,3 @@
 This file folder is for uploading my STAT 440 homeworks and the exams to show my proficiency in data wrangling.
+
+这个文档包含我的STAT440作业和测试，来展示我的数据管理和数据清洗的能力
